修改文本内容

--- a/src/main/resources/templates/page/cn/speakers.html
+++ b/src/main/resources/templates/page/cn/speakers.html
@@ -79,9 +79,49 @@ var _hmt = _hmt || [];
 
   <div class="page; f-20 lh-40" style="text-aligh: justify; font-family:'Times New Roman';">
     <div class="page_left col-6-5 fl" style="border-right: 2px dashed; border-color: #c3bfbf; padding: 10px;">
-      <div class="background4" style="padding-left:55px; padding-bottom: 10px;">特邀嘉宾</div>
+      <div class="background4" style="padding-left:55px; padding-bottom: 10px;">参会嘉宾</div>
+			<dl>
+			  <div class="fl col-4-4" style="display: table;">
+			    <img src="../img/speakers/thomastchen.png" height="150" width="140" />
+			  </div>
+			  <dt>Prof. Thomas T. Chen</dt>
+			  <dd>Department of Molecular & Cell Biology, University of Connecticut, USA; Center of Excellence for the Oceans, National Taiwan Ocean University, Keelung, Taiwan</dd>
+			  <dd><strong>Short Summary</strong>: His research focuses on (1) structure, evolution and regulation of growth hormone and growth factor genes in finfish and shellfish; (2) molecular actions of growth hormone and growth factor; (3) expression of foreign growth hormone or anti-microbial peptide gene in transgenic fish; (4) anti-tumor activities of the E-peptides of pro-IGF-I; and (5) molecular toxicology: development of molecular biological probes for assessing stress in fish caused by environmental xenobiotic or other pollutants at sub-lethal levels.</dd>
+			<br/>
+			  <div class="clear"></div>
+			</dl>
+			<dl>
+			  <div class="fl col-4-4" style="display: table;">
+			    <img src="../img/speakers/ikuoyamamoto.jpg" height="150" width="140" />
+			  </div>
+			  <dt>Dr. Ikuo Yamamoto</dt>
+			  <dd>Professor, Organization for Marine Science and Technology, Nagasaki University, Japan</dd>
+			  <dd><strong>Short Summary</strong>: Dr. Ikuo Yamamoto is Vice President and Professor of Nagasaki University in Japan. His areas of work include the development of Autonomous Underwater Vehicle (Leader of AUV “Urashima”, which established the world record autonomous cruising in February 2005), Remotely Operated Vehicle (Champion in underwater vehicle competition of Techno ocean world convention in 2012 and Okinawa offshore robotics contest in 2014,2015,2016; “Kaiko”, 10000m deep cruising in 1995), Robotic fish (the first life-like sea bream robotic fish was created in 1995, followed by dolphin, shark ray ,coelacanth, carp, etc.).</dd>
+			<br/>
+			  <div class="clear"></div>
+			</dl>
+			<dl>
+			  <div class="fl col-4-4" style="display: table;">
+			    <img src="../img/speakers/konstantinbloch.jpg" height="150" width="140" />
+			  </div>
+			  <dt>Dr. Konstantin Bloch</dt>
+			  <dd>Associate Professor, Sackler Faculty of Medicine, Tel Aviv University, Israel</dd>
+			  <dd><strong>Short Summary</strong>: Konstantin Bloch, PhD is head of research team at the Felsenstein Medical Research Center and associate professor at the Sackler Faculty of Medicine, Tel-Aviv University, Israel. Dr. Bloch is an expert in the field of pancreatic islet transplantation. He is the scientific co-founder of the Beta-O2 Technologies, a biomedical company developing a highly oxygenated implantable bio-artificial pancreas for treatment of type 1 diabetes (currently in Phase I/II). Recently, his team developed a proprietary technology of bioengineered insulin delivery to the brain for treatment of Alzheimer's disease. </dd>
+			<br/>
+			  <div class="clear"></div>
+			</dl>
+			<dl>
+			  <div class="fl col-4-4" style="display: table;">
+			    <img src="../img/speakers/vasilisntziachristos.jpg" height="150" width="140" />
+			  </div>
+			  <dt>Prof. Vasilis Ntziachristos</dt>
+			  <dd>Biological Imaging (CBI) at the Technical University of Munich</dd>
+			  <dd><strong>Short Summary</strong>: Vasilis Ntziachristos Ph.D. is Professor of Medicine, Professor of Electrical Engineering and Director of the Chair for Biological Imaging (CBI) at the Technical University of Munich, Director of the Institute for Biological and Medical Imaging (IBMI) at the Helmholtz Zentrum Munchen and Director of Bioengineering at the Helmholtz Pioneer Campus. Professor Ntziachristos is the Editor of the journal Photoacoustics, regularly Chairs in international meetings and councils and has received numerous awards and distinctions, including the Chaire Blaise Pascal (2019), the Gold Medal from the Society for Molecular Imaging (2015), the Gottfried Leibnitz prize from the German Research Foundation (2013), the Erwin Schrödinger Award (2012) and was named one of the world’s top innovators by the Massachusetts Institute of Technology (MIT) Technology Review in 2004.</dd>
+			<br/>
+			  <div class="clear"></div>
+			</dl>
 			<p>ICABST2019大会报告人及参会嘉宾将于近期更新发布。<br/>
-			如您希望在大会做报告，请提交参会回执并注明“口头报告”，由组委会统一审阅后一并发布。
+			如您希望在大会做报告，请提交参会回执并注明“口头报告”，由组委会统一审阅后一并发布。<br/><br/>
 			</p>
     <div class="background4" style="padding-left:55px; padding-bottom: 10px;">历届嘉宾</div>
 		<dl>
