修改文本内容

--- a/src/main/resources/templates/page/en/speakers.html
+++ b/src/main/resources/templates/page/en/speakers.html
@@ -78,68 +78,55 @@ var _hmt = _hmt || [];
 
 <div class="w-1200 bg_white pt-30">
 
-  <div class="page; lh-40" style="text-align: justify; font-family:'Times New Roman'; font-size: 20px">
+  <div class="page; lh-30" style="text-align: justify; font-family:'Times New Roman'; font-size: 20px">
     <div class="page_left col-6-5 fl" style="border-right: 2px dashed; border-color: #c3bfbf; padding: 10px;">
 			<div class="background4" style="padding-left:55px; padding-bottom: 10px;">Speaker List</div>
 			<div class="pb-20 pl-30">
 			<p>
 				All colleagues are welcomed to submit abstracts and make oral/poster presentations at ICABST2019! All oral presentations are to be delivered in English, and will be duration of 20-25 minutes. We will select qualified oral presentations after review. More qualified speakers will be announced soon after confirmation. To be a speaker of ICABST2019, please submit your abstract at an early date. </br>
-				</br>
-				* Please be aware that we will NOT contact speakers / participants in in authoritative way regarding their travel and accommodations. </br>
-				* Please keep in mind the authorities’ contact: icabst@apanse.com; Tel: +86 371 63226982.
 			</p>
 			</div>
+      <dl>
+        <div class="fl col-4-4" style="display: table;">
+          <img src="../img/speakers/thomastchen.png" height="150" width="140" />
+        </div>
+        <dt>Prof. Thomas T. Chen</dt>
+        <dd>Department of Molecular & Cell Biology, University of Connecticut, USA; Center of Excellence for the Oceans, National Taiwan Ocean University, Keelung, Taiwan</dd>
+        <dd><strong>Short Summary</strong>: His research focuses on (1) structure, evolution and regulation of growth hormone and growth factor genes in finfish and shellfish; (2) molecular actions of growth hormone and growth factor; (3) expression of foreign growth hormone or anti-microbial peptide gene in transgenic fish; (4) anti-tumor activities of the E-peptides of pro-IGF-I; and (5) molecular toxicology: development of molecular biological probes for assessing stress in fish caused by environmental xenobiotic or other pollutants at sub-lethal levels.</dd>
+		  <br/>
+			  <div class="clear"></div>
+      </dl>
+      <dl>
+        <div class="fl col-4-4" style="display: table;">
+          <img src="../img/speakers/ikuoyamamoto.jpg" height="150" width="140" />
+        </div>
+        <dt>Dr. Ikuo Yamamoto</dt>
+        <dd>Professor, Organization for Marine Science and Technology, Nagasaki University, Japan</dd>
+        <dd><strong>Short Summary</strong>: Dr. Ikuo Yamamoto is Vice President and Professor of Nagasaki University in Japan. His areas of work include the development of Autonomous Underwater Vehicle (Leader of AUV “Urashima”, which established the world record autonomous cruising in February 2005), Remotely Operated Vehicle (Champion in underwater vehicle competition of Techno ocean world convention in 2012 and Okinawa offshore robotics contest in 2014,2015,2016; “Kaiko”, 10000m deep cruising in 1995), Robotic fish (the first life-like sea bream robotic fish was created in 1995, followed by dolphin, shark ray ,coelacanth, carp, etc.).</dd>
+		  <br/>
+			  <div class="clear"></div>
+      </dl>
+      <dl>
+        <div class="fl col-4-4" style="display: table;">
+          <img src="../img/speakers/konstantinbloch.jpg" height="150" width="140" />
+        </div>
+        <dt>Dr. Konstantin Bloch</dt>
+        <dd>Associate Professor, Sackler Faculty of Medicine, Tel Aviv University, Israel</dd>
+        <dd><strong>Short Summary</strong>: Konstantin Bloch, PhD is head of research team at the Felsenstein Medical Research Center and associate professor at the Sackler Faculty of Medicine, Tel-Aviv University, Israel. Dr. Bloch is an expert in the field of pancreatic islet transplantation. He is the scientific co-founder of the Beta-O2 Technologies, a biomedical company developing a highly oxygenated implantable bio-artificial pancreas for treatment of type 1 diabetes (currently in Phase I/II). Recently, his team developed a proprietary technology of bioengineered insulin delivery to the brain for treatment of Alzheimer's disease. </dd>
+		  <br/>
+			  <div class="clear"></div>
+      </dl>
+      <dl>
+        <div class="fl col-4-4" style="display: table;">
+          <img src="../img/speakers/vasilisntziachristos.jpg" height="150" width="140" />
+        </div>
+        <dt>Prof. Vasilis Ntziachristos</dt>
+        <dd>Biological Imaging (CBI) at the Technical University of Munich</dd>
+        <dd><strong>Short Summary</strong>: Vasilis Ntziachristos Ph.D. is Professor of Medicine, Professor of Electrical Engineering and Director of the Chair for Biological Imaging (CBI) at the Technical University of Munich, Director of the Institute for Biological and Medical Imaging (IBMI) at the Helmholtz Zentrum Munchen and Director of Bioengineering at the Helmholtz Pioneer Campus. Professor Ntziachristos is the Editor of the journal Photoacoustics, regularly Chairs in international meetings and councils and has received numerous awards and distinctions, including the Chaire Blaise Pascal (2019), the Gold Medal from the Society for Molecular Imaging (2015), the Gottfried Leibnitz prize from the German Research Foundation (2013), the Erwin Schrödinger Award (2012) and was named one of the world’s top innovators by the Massachusetts Institute of Technology (MIT) Technology Review in 2004.</dd>
+		  <br/>
+			  <div class="clear"></div>
+      </dl>
       <!--dl>
-        <div class="fl col-4-4" style="display: table;">
-          <img src="/d/file/p/2019/02-25/0c4a742c52cbd381373c7eefa0c8c85c.png"/>
-        </div>
-        <dt>郭毅可</dt>
-        <dd>英国皇家工程院院士，欧洲科学院院士，英国帝国理工学院数据科学研究所所长，上海大学计算机学院院长</dd>
-        <dd><strong>研究领域：</strong>分布式数据挖掘，在网格计算、云计算、传感器网络和生命科学领域中的数据科学。</dd>
-        <dd>
-          1980年至1987年在清华大学计算机系计算机专业就学，是首批清华硕博联读生。1987年被公派至英国留学，1994年博士毕业于英国帝国理工学院计算机系，获科学博士学位。2002年成为帝国理工学院计算机系最年轻的计算机科学教授，2014年创建帝国理工数据科学研究所并被任命为所长。2015年4月起，担任上海大学计算机工程与科学学院院长。
-        </dd>
-        <div class="clear"></div>
-      </dl>
-      <dl>
-        <div class="fl col-4-4" style="display: table;">
-          <img src="/d/file/p/2019/02-25/0b580b2271db80b2ef23230adc262b35.png"/>
-        </div>
-        <dt>张建伟</dt>
-        <dd>德国汉堡科学院院士，德国汉堡大学教授，多模态技术研究所所长，国家千人计划专家</dd>
-        <dd><strong>研究领域：</strong>智能感知、机器学习、自主规划、多传感信息融合、智能机器人、多模态人机交互。</dd>
-        <dd>
-          1986年清华大学计算机系学士第一名毕业，1989年获清华大学计算机系硕士(人工智能)学位，1994年获德国卡尔斯鲁厄大学计算机系博士(机器人)学位。发表三百余篇论文专著，多次获得国际会议最佳论文奖，拥有四十余项发明专利。担任多个国际智能机器人及智能控制会议的大会主席、数家国际企业顾问、国务院侨办及中国侨联专家海外咨询委员、德国清华校友会会长、德中企业家联合会会长、北德华人华侨联合会会长。
-        </dd>
-        <div class="clear"></div>
-      </dl>
-      <dl>
-        <div class="fl col-4-4" style="display: table;">
-          <img src="/d/file/p/2019/02-26/4df71bf8d088d8d79b2e6abf222d432f.png"/>
-        </div>
-        <dt>傅晓明</dt>
-        <dd>德国哥廷根大学终身教授，中国教育部、清华大学计算机系长江学者讲座教授，美国UCLA富布莱特学者讲座教授，国际电气与电子工程师学会（IEEE）高级会员</dd>
-        <dd><strong>研究领域：</strong>互联网、移动计算、云计算、大数据及社会网络。</dd>
-        <dd>
-          1994年毕业于东北大学，获学士学位，1997年获东北大学计算机应用专业硕士学位，2000年获清华大学计算机系统结构专业博士学位。2000年底担任德国柏林工业大学研究员。2002年起任教德国哥廷根大学，创建计算机网络研究实验室，兼任数学与计算机科学学院学术院长、国际办公室主任等职。2007年（33岁）成为哥廷根大学建校270年历史上的第一位华人终身教授（时为全校最年轻的教授），也是德国历史上由中国博士获聘终身教授职位的第一人。他曾担任IEEE
-          ICNP 2013、ACM ICN 2016等国际学术会议总主席，以及Green ICN、Mobile Cloud、Clean Sky及ICN 2020等多个欧盟大型科研项目的总负责人、首席科学家。
-          <p>&nbsp;</p>
-          <p>&nbsp;</p></dd>
-        <div class="clear"></div>
-      </dl>
-      <dl>
-        <div class="fl col-4-4" style="display: table;">
-          <img src="/d/file/p/2019/02-25/06dcf9cc733e77399e4f117562136ad1.png"/>
-        </div>
-        <dt>何泾沙</dt>
-        <dd>北京工业大学教授，博士生导师、北京市特聘教授、湖北 “楚天学者 计划” 主讲教授</dd>
-        <dd><strong>研究领域：</strong>计算机网络、信息安全、3D打印、大数据与云计算安全、数字取证。</dd>
-        <dd>毕业于美国马里兰大学，先后任职于美国IBM Corp. (资深计算机科学家）、MCI Communications Corp. (高级工程师）、GRIC Communications, Inc.
-          (首席工程师）等，先后获取美国发明专利12项。2003年通过北京市高层次人才项目引进到北京工业大学任教授。截止2017年3月，在国内外学术期刊和国际会议上共发表论文261篇，其中已被SCI收录21篇，EI/ISTP收录184篇，获中国发明专利58项，主持了包括国家自然科学基金项目、863课题等30余项。
-        </dd>
-        <div class="clear"></div>
-      </dl>
-      <dl>
         <div class="fl col-4-4" style="display: table;">
           <img src="/d/file/p/2019/02-26/d22d7755618a85b0833749278fb9998e.png"/>
         </div>
@@ -189,6 +176,10 @@ var _hmt = _hmt || [];
         </dd>
         <div class="clear"></div>
       </dl-->
+			<p>
+			* Please be aware that we will NOT contact speakers / participants in in authoritative way regarding their travel and accommodations. </br>
+			* Please keep in mind the authorities’ contact: icabst@apanse.com; Tel: +86 371 63226982.<br/><br/>
+			</p>
     <div class="background4" style="padding-left:55px; padding-bottom: 10px;">Previous Speakers</div>
 		<dl>
 		  <div class="fl col-4-4" style="display: table;">
@@ -322,7 +313,7 @@ var _hmt = _hmt || [];
 		</dl>
     </div>
 
-    <div class="page_right col-4-1 fr mr-25">
+    <div class="page_right col-4-1 fr mr-25 lh-40">
 			<div class="; lh-80" style="border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
 			  <ul>
 			    <li><a class="pointer" href="/submit" target="_blank"><img src="../img/abstractsubmission.png" height="68px"></a></li>
