--- a/src/main/resources/templates/page/en/submit.html
+++ b/src/main/resources/templates/page/en/submit.html
@@ -381,7 +381,7 @@ var _hmt = _hmt || [];
 
                     </div>
 
-                    </div>
+                </form>
                 </form>
 			</div>
 
