--- a/src/main/resources/templates/page/cn/article.html
+++ b/src/main/resources/templates/page/cn/article.html
@@ -295,9 +295,9 @@ var _hmt = _hmt || [];
                             </div>
                         </div>
                         <div class="layui-form-item pr-20">
-                            <label for="allauthorsID" class="layui-form-label">所有作者</label>
+                            <label for="allAuthorsID" class="layui-form-label">所有作者</label>
                             <div class="layui-input-block">
-                                <input type="text" id="allauthorsID" name="allauthors"
+                                <input type="text" id="allAuthorsID" name="allAuthors"
                                        autocomplete="off" class="layui-input">
                             </div>
                         </div>
