--- a/src/main/resources/templates/page/en/submit.html
+++ b/src/main/resources/templates/page/en/submit.html
@@ -14,7 +14,6 @@ var _hmt = _hmt || [];
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
-
   <title>ICABST Submit|Sign Up--2019 International Conference On Advances in Biological Science and Technology(ICABST2019)</title>
   <meta name="keywords" content="ICABST,submission,submit,Biotechnology,conference,bioengineering,biotechnology conference,Bangkok,Thailand,Asia" />
   <meta name="description" content="ICABST2019 will be held in Bangkok during Dec. 26-28, 2019" />
@@ -78,7 +77,7 @@ var _hmt = _hmt || [];
 
 <div class="w-1200 bg_white pt-30">
 
-    <div class="page; lh-40" style="text-align: justify; font-family:'Times New Roman'; font-size: 20px">
+    <div class="page; f-20 lh-40" style="text-align: justify; font-family:'Times New Roman';">
         <div class="page_left col-6-5 fl" style="border-right: 2px dashed; border-color: #c3bfbf; padding: 10px;">
             <div class="background4" style="padding-left:55px; padding-bottom: 10px;">Introduction</div>
             <div class="public_p pb-20 pl-30">
@@ -384,7 +383,7 @@ var _hmt = _hmt || [];
                 </form>
                 </form>
 			</div>
-
+</div>
     <div class="page_right col-4-1 fr mr-25">
 			<div class="; lh-80" style="border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
 			  <ul>
@@ -425,6 +424,7 @@ var _hmt = _hmt || [];
 
 
 </div>
+
 
 <!--footer-->
 <footer class="main-footer">
