新增合作媒体

--- a/src/main/resources/templates/page/en/index.html
+++ b/src/main/resources/templates/page/en/index.html
@@ -17,7 +17,7 @@ var _hmt = _hmt || [];
   <meta name="shenma-site-verification" content="3f527c71e3b8bd47c35ed86f522b29af_1561971198"> 
 	<meta name="sogou_site_verification" content="hDnpiVhTgo"/>
   <title>ICABST Home|Homepage--2019 International Conference On Advances in Biological Science and Technology(ICABST2019)</title>
-  <meta name="keywords" content="ICABST,Homepage,Home,Biotechnology,conference,bioengineering,biotechnology conference,Bangkok,Thailand,Asia" />
+  <meta name="keywords" content="ICABST,ICABST2019,biomaterial,biomedical,Homepage,Home,Biotechnology,conference,bioengineering,biotechnology conference,Bangkok,Thailand,Asia" />
   <meta name="description" content="ICABST2019 will be held in Bangkok during Dec. 26-28, 2019" />
   <meta name="robots" content="index,follow" />
   <meta http-equiv="x-dns-prefetch-control" content="on">
@@ -210,7 +210,8 @@ var _hmt = _hmt || [];
 			<li><a href="http://meeting.dxy.cn/article/620176" target="_blank"><img src="../img/12--dingxiang.png"/></a></li>
 			<li><a href="https://www.science-community.org/en/node/205354" target="_blank"><img src="../img/13--science-committee.png"/></a></li>
 			<li><a href="http://membs.org/membs/news/event_details/-international-conference-on-advances-in-biological-science-and-technology-icabst2019" target="_blank"><img src="../img/14--membs.png"/></a></li>
-      <div class="clear"></div>
+      <li><a href="https://global.acs.org/events/international-conference-on-advances-in-biological-science-and-technology-icabst2019/" target="_blank"><img src="../img/15--acs.png"/></a></li>
+			<div class="clear"></div>
     </ul>
   </div>
 
