--- a/src/main/resources/templates/page/cn/program.html
+++ b/src/main/resources/templates/page/cn/program.html
@@ -15,7 +15,7 @@ var _hmt = _hmt || [];
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />  
   <title>ICABST会议安排|会议日程--2019国际前沿生物科学与技术国际会议(ICABST2019),泰国生物会议</title>
-  <meta name="keywords" content="ICABST,会议日程,嘉宾,生物会议,曼谷,泰国,国际,会议,生物技术,生物工程,学术会议,SCI正刊,SCI摘要,EI会议,CPCI,ISTP" />
+  <meta name="keywords" content="ICABST,会议日程,嘉宾,ICABST2019,biotechnology,biomaterial,biomedical,生物会议,曼谷,泰国,国际,会议,生物技术,生物工程,学术会议,SCI正刊,SCI摘要,EI会议,CPCI,ISTP" />
   <meta name="description" content="ICABST,2019国际前沿生物科学与技术国际会议将在12月底于曼谷召开,会议可安排SCI/EI期刊论文发表" />
   <meta name="robots" content="index,follow" />
   <meta http-equiv="x-dns-prefetch-control" content="on">
