更改文本内容

--- a/src/main/resources/templates/page/en/about.html
+++ b/src/main/resources/templates/page/en/about.html
@@ -16,7 +16,7 @@ var _hmt = _hmt || [];
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
 
   <title>About ICABST|Intorduction--2019 International Conference On Advances in Biological Science and Technology(ICABST2019)</title>
-  <meta name="keywords" content="ICABST,About,Biotechnology,conference,bioengineering,biotechnology conference,Bangkok,Thailand,Asia" />
+  <meta name="keywords" content="ICABST,ICABST2019,biomaterial,biomedical,About,Biotechnology,conference,bioengineering,biotechnology conference,Bangkok,Thailand,Asia" />
   <meta name="description" content="ICABST2019 will be held in Bangkok during Dec. 26-28, 2019" />
   <meta name="robots" content="index,follow" />
   <meta http-equiv="x-dns-prefetch-control" content="on">
@@ -89,7 +89,6 @@ var _hmt = _hmt || [];
 					<p>
 						 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;As an annual gathering, it provides an extensive platform for scientists, researchers and scholars to present their research results and newest findings
 						 in all fields of Biological Science and Technology, discuss the practical challenges encountered recommend better solutions for biotechnology. 
-						 The last conference, successfully held in Zhengzhou, China, attracted about 200 participants from all over the world.
 						 ICABST2019 will include keynote speeches, invited speeches, oral presentations and poster presentations. 
 						 The conference certification will be issued to all attendees including listeners. 
 					</p>
