--- a/src/main/resources/templates/page/en/speakers.html
+++ b/src/main/resources/templates/page/en/speakers.html
@@ -16,7 +16,7 @@ var _hmt = _hmt || [];
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
 
   <title>ICABST Presentations|Speakers--2019 International Conference On Advances in Biological Science and Technology(ICABST2019)</title>
-  <meta name="keywords" content="ICABST,speakers,Biotechnology,conference,bioengineering,biotechnology conference,Bangkok,Thailand,Asia" />
+  <meta name="keywords" content="ICABST,ICABST2019,biomaterial,biomedicalspeakers,Biotechnology,conference,bioengineering,biotechnology conference,Bangkok,Thailand,Asia" />
   <meta name="description" content="ICABST2019 will be held in Bangkok during Dec. 26-28, 2019" />
   <meta name="robots" content="index,follow" />
   <meta http-equiv="x-dns-prefetch-control" content="on">
@@ -180,7 +180,7 @@ var _hmt = _hmt || [];
 			* Please be aware that we will NOT contact speakers / participants in in authoritative way regarding their travel and accommodations. </br>
 			* Please keep in mind the authorities’ contact: icabst@apanse.com; Tel: +86 371 63226982.<br/><br/>
 			</p>
-    <div class="background4" style="padding-left:55px; padding-bottom: 10px;">Previous Speakers</div>
+    <div class="background4" style="padding-left:55px; padding-bottom: 10px;">Previous APANSE Speakers (From other APANSE Conferences)</div>
 		<dl>
 		  <div class="fl col-4-4" style="display: table;">
 		    <img src="../img/speakers/gerardaateshian.jpg" height="150" width="140" />
