--- a/src/main/resources/templates/page/en/venue.html
+++ b/src/main/resources/templates/page/en/venue.html
@@ -16,7 +16,7 @@ var _hmt = _hmt || [];
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
 
   <title>ICABST Venue|Address--2019 International Conference On Advances in Biological Science and Technology(ICABST2019)</title>
-  <meta name="keywords" content="ICABST,Venue,Biotechnology,conference,bioengineering,biotechnology conference,Bangkok,Thailand,Asia" />
+  <meta name="keywords" content="ICABST,ICABST2019,biomaterial,biomedicalVenue,Biotechnology,conference,bioengineering,biotechnology conference,Bangkok,Thailand,Asia" />
   <meta name="description" content="ICABST2019 will be held in Bangkok during Dec. 26-28, 2019" />
   <meta name="robots" content="index,follow" />
   <meta http-equiv="x-dns-prefetch-control" content="on">
