更改文本内容

--- a/src/main/resources/templates/page/cn/about.html
+++ b/src/main/resources/templates/page/cn/about.html
@@ -117,9 +117,9 @@ var _hmt = _hmt || [];
             大会将围绕“前沿生物科学与技术”，分为以下议题：
 					</p>
             <p>1. 分子生物学; </p>
-            <p>2. 生物医学与制药</p>
+            <p>2. 光生物学与光化学</p>
             <p>3. 生物力学与工程</p>
-            <p>4. 生物及医学材料</p>
+            <p>4. 生物医学与制药</p>
             <p>5. 生物化学</p>
             <p>6. 农业食品及动植物</p>
             <p>7. 其他相关领域应用</p>
