更改文本内容

--- a/src/main/resources/templates/page/en/about.html
+++ b/src/main/resources/templates/page/en/about.html
@@ -88,7 +88,7 @@ var _hmt = _hmt || [];
 					</p>
 					<p>
 						 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;As an annual gathering, it provides an extensive platform for scientists, researchers and scholars to present their research results and newest findings
-						 in all fields of Biological Science and Technology, discuss the practical challenges encountered recommend better solutions for biotechnology. 
+						 in all fields of Biological Science and Technology, especially in Molecular Biology and Photobiology, discuss the practical challenges encountered recommend better solutions for biotechnology. 
 						 ICABST2019 will include keynote speeches, invited speeches, oral presentations and poster presentations. 
 						 The conference certification will be issued to all attendees including listeners. 
 					</p>
@@ -127,9 +127,9 @@ var _hmt = _hmt || [];
 					The topics of interest include but are not limited to: 
 					</p>
             <p>1. Molecular Biology</p>
-            <p>2. Biomedicine, Biopharmaceuticals and Pharmacology</p>
+            <p>2. Photobiology and Photochemistry</p>
             <p>3. Biomechanics and Biomechanical Engineering</p>
-            <p>4. Biomaterials and Biomedical materials</p>
+            <p>4. Biomedicine, Biopharmaceuticals and Pharmacology</p>
             <p>5. Biochemistry</p>
             <p>6. Agricultural, Food, Animal and Plant Science</p>
             <p>7. Other Related Topics</p>
