--- a/src/main/resources/templates/page/en/index.html
+++ b/src/main/resources/templates/page/en/index.html
@@ -110,7 +110,7 @@ var _hmt = _hmt || [];
 					The conference certification will be issued to all attendees including listeners. 
 					<br/>
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;As an annual gathering, it provides an extensive platform for scientists, researchers and scholars to present their research results and newest findings
-					 in all fields of Biological Science and Technology, discuss the practical challenges encountered recommend better solutions for biotechnology. 
+					 in all fields of Biological Science and Technology, especially in Molecular Biology and Photobiology, discuss the practical challenges encountered recommend better solutions for biotechnology. 
 					 <br/>
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Thailand: "The Land of Smiles". Thailand is an incredible destination with palaces, temples, markets, shopping, spas, friendly people, 
 					fine dining and some of the best hotels in the world. The word 'Thai' means freedom, so literally Thailand is the land of freedom and Thailand proudly proclaims that. 
