修改网页内容

--- a/src/main/resources/templates/page/cn/cpci.html
+++ b/src/main/resources/templates/page/cn/cpci.html
@@ -86,16 +86,16 @@ var _hmt = _hmt || [];
           </p>
           <div class="mb-10">
             <p>
-							&nbsp;&nbsp;&nbsp;&nbsp;2019国际前沿生物科学与技术国际会议将于2019年12月26日-28日在泰国曼谷召开。本届会议由亚太自然科学与工程协会、梅州大学（Maejo University）联合主办召开，
+							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2019国际前沿生物科学与技术国际会议将于2019年12月26日-28日在泰国曼谷召开。本届会议由亚太自然科学与工程协会、梅州大学（Maejo University）联合主办召开，
 							并由玛希隆大学（Mahidol University），清迈大学（Chiang Mai University）提供协办支持。同时大会被Nature Events （www.nature.com）、ACS、MEMBS、BrownWalker Press、IOP Publishing、
 							丁香会议、科学网等多个学术平台收录并发布。在举办学术会议的同时，联合国际知名出版社进行会议及期刊论文的征文和发表活动，历年来已成功帮助国内众多学者完成论文的发表和检索工作。<br/>
-							&nbsp;&nbsp;&nbsp;&nbsp;如需发表会议论文，请在提交文章时做出说明（如发表SCI期刊论文，也请做出说明）---在论文提交后，会由大会学术委员会进行评审，接收的论文将安排送交出版（含ISSN，DOI），并提交EI-Compendex（EI检索）及CPCI-S（ISTP检索）数据库收录。
+							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;意向发表会议论文的文章，会由大会学术委员会进行评审，接收的论文将安排送交出版（含ISSN，DOI），并提交EI-Compendex（EI检索）及CPCI-S（ISTP检索）数据库收录。
 							发表EI检索及ISTP检索的论文，对国内高校教师的职称评定、硕博士生的学分累计、毕业、出国留学等具有举足轻重的影响。如您有意向发表相关领域学术论文，请尽快提交稿件。（检索范例请见页尾）<br/>
 			</p>
 			
           </div>
 					<div class="mb-10">
-            <strong>一、期刊介绍</strong>
+            <strong>一、发表介绍</strong>
 						<div class="public_p pl-30">
 			<p>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>出版物：</strong>IOP Conference Series: Earth and Environmental Science<br/>
@@ -103,7 +103,7 @@ var _hmt = _hmt || [];
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>ISSN：</strong>1755-1307<br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>发表检索：</strong>2020年1月底前后发表，并在发表后2个月完成检索<br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>投稿截止：</strong>本批次征文将于12月15日截止<br/>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>数据库收录：</strong>EI数据库（EI-Compendex，）和ISTP数据库（CPCI-S）<br/>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>数据库收录：</strong>EI数据库（EI-Compendex） ISTP数据库（CPCI-S）<br/>
 			</p>
             </div>
 							
@@ -113,7 +113,7 @@ var _hmt = _hmt || [];
             <strong>二、投稿方式</strong>
 						<div class="pl-23">
             <p>1. <a class="pointer" href="/cn/article" target="_blank" style="color: #102cf7"><u><strong>点击进入在线投稿链接(初始文档需小于10MB)</strong></u></a><br/>
-              2. 直接将文章发至投稿邮箱editor@apanse.com（注明文章表类型，如“SCI摘要发表”）
+              2. 直接将文章发至投稿邮箱editor@apanse.com（注明文章表类型，如“EI会议论文”）
             </p>
 						</div>
           </div>
