--- a/src/main/resources/templates/page/cn/sci3.html
+++ b/src/main/resources/templates/page/cn/sci3.html
@@ -99,13 +99,12 @@ var _hmt = _hmt || [];
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>SCI-3：</strong>医学影像技术与应用<br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>SCI-4：</strong>药物生物学（生药学）<br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>SCI-5：</strong>药物化学、药理学毒理学<br/>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>SCI-6：</strong>药物化学<br/>
 			<br/>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>期刊发表周期：</strong>平均为3-5个月发表<br/>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>期刊发表版面：</strong>2019年剩余少量正刊版面，及2020年上半年正刊版面<br/>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>期刊检索相关：</strong>期刊影响因子在0.8-2之间，检索类型为Article（期刊检索，非会议论文，不带任何会议信息）<br/>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>期刊出版来源：</strong>来自多个国家的SCI期刊，如本届会议合作的泰国某大学主办的SCI杂志。<br/>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>注：因和期刊长期合作，由我方安排的文章，其中稿率及发表周期将优于您自行投稿的周期</strong><br/>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>期刊周期：</strong>平均为3-5个月发表<br/>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>期刊版面：</strong>2019年剩余少量正刊版面，及2020年上半年正刊版面<br/>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>期刊检索：</strong>影响因子在0.8-2，检索类型为Article（期刊论文检索，无会议信息）<br/>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>期刊来源：</strong>来自多个国家的SCI期刊，如本届会议合作的泰国大学主办的SCI<br/>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>注：由我方安排的文章，其中稿率及发表周期将优于您自行投稿的周期</strong><br/>
 			</p>
             </div>
             
@@ -131,6 +130,7 @@ var _hmt = _hmt || [];
               投稿时请根据自身情况告知我方您对分区、影响因子及发表时间的要求<br/>
               投稿后我方将在1-2个工作日内给您回复，并在10个工作日内完成论文初审<br/>
               所有投稿将按照作者投稿意向安排发表，如有变动会提前进行沟通<br/>
+							我方可提供国内外正规发票；如需要出版方提供发票，请提前告知<br/>
             </p>
             </div>
 					</div>
