--- a/src/main/resources/templates/page/cn/sciabstract.html
+++ b/src/main/resources/templates/page/cn/sciabstract.html
@@ -86,12 +86,12 @@ var _hmt = _hmt || [];
           </p>
           <div class="mb-10">
             <p>
-			&nbsp;&nbsp;&nbsp;&nbsp;<strong>我方历年安排发表的SCI摘要均已完成检索（检索范例请于页尾查看），2019年上半年批次SCI摘要已完成发表，下半年批次仍在持续收稿中</strong><br/>
-			&nbsp;&nbsp;&nbsp;&nbsp;SCI摘要（Meeting Abstract）作为近几年的热门发表方式，具有易撰写、发表快、检索快、认可度高等特点<br/>
-			&nbsp;&nbsp;&nbsp;&nbsp;易撰写：200-300个英文单词即可（我方可提供翻译）；可将已发表过的论文精炼修改后再发表（需修改题目），也可将未发表的论文精简后发表（不会影响全文的发表）<br/>
-			&nbsp;&nbsp;&nbsp;&nbsp;发表快：我方负责全权录用--一经录用即可确保发表<br/>
-			&nbsp;&nbsp;&nbsp;&nbsp;检索收录快：文章发表后最快将在2个月内完成SCI检索收录<br/>
-			&nbsp;&nbsp;&nbsp;&nbsp;较高认可度：满足评定文件中“发表SCI收录的学术论文”的条件（细则请参见贵单位评定认定文件，或咨询贵单位科研处/人事处）<br/>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>我方历年安排发表的SCI摘要均已完成检索（检索范例请于页尾查看），2019年上半年批次SCI摘要已完成发表，下半年批次仍在持续收稿中。</strong><br/>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SCI摘要（Meeting Abstract）作为近几年的热门发表方式，具有易撰写、发表快、检索快、认可度高等特点<br/>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>易撰写：</strong>200-300个英文单词即可（我方可提供翻译）；可将已发表过的论文精炼修改后再发表（需修改题目），也可将未发表的论文精简后发表（不会影响全文的发表）<br/>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>发表快：</strong>我方负责全权录用--一经录用即可确保发表<br/>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>检索收录快：</strong>文章发表后最快将在2个月内完成SCI检索收录<br/>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>较高认可度：</strong>满足评定文件中“发表SCI收录的学术论文”的条件（细则请参见贵单位评定认定文件，或咨询贵单位科研处/人事处）<br/>
 			</p>
 			
           </div>
@@ -130,7 +130,7 @@ var _hmt = _hmt || [];
 				4. 同一第一作者投稿不可超过三篇；如有同一单位学者组织投稿，可提前与我方沟通团体发表方式及优惠，并预约版面<br/>
 				5. 发表流程：（在文章录用后缴纳，不发表不收费）投稿初稿→审稿反馈→录用排版→签订协议并缴费→清样校对和发表→SCI检索<br/>
 				6. 在文章完成SCI检索后，如有需要，可联系我方编辑部免费提供检索证明（一级单位开具，真实有效）<br/>
-				7. 我方可提供版面费发票（国内外正规发票）<br/>
+				7. 我方可提供版面费发票（国内外正规发票），如需要出版方提供发票，请提前告知<br/>
             </p>
             </div>
 					</div>
@@ -149,9 +149,9 @@ var _hmt = _hmt || [];
 		  <strong>五、检索范例</strong>
 		  <p>
 			<ul>
-			<li><img src="../img/SCI摘要记录1.png" height="400px"></li>
-			<li><img src="../img/SCI摘要记录2.png" height="400px"></li>
-			<li><img src="../img/SCI摘要记录3.png" height="400px" width="299px"></li>
+			<li><img src="../img/SCI摘要记录1.png" height="1000px"></li>
+			<li><img src="../img/SCI摘要记录2.png" height="1000px"></li>
+			<li><img src="../img/SCI摘要记录3.png" height="1000px"></li>
 			<div class="clear"></div>
 			</ul>
 		  </p>
