--- a/src/main/resources/templates/page/cn/sciabstract.html
+++ b/src/main/resources/templates/page/cn/sciabstract.html
@@ -103,9 +103,9 @@ var _hmt = _hmt || [];
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>期刊ISSN：</strong>1742-7835<br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>影响因子：</strong>2.45（最新JCR发布）<br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>期刊分区：</strong>中科院分区三区，JCR分区Q2<br/>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>发表检索：本批次征稿将在12月底前后发表，并在明年2月份前完成检索<br/>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>文章模板：<a href="/cn/download/ICABST-Abstract-Template.doc" target="_blank" style="color: #102cf7"><u>点击下载摘要模板</u></a><br/>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>投稿截止：本批次征文将于11月30日截止<br/>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>发表检索：</strong>本批次征稿将在12月底前后发表，并在明年2月份前完成检索<br/>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>文章模板：</strong><a href="/cn/download/ICABST-Abstract-Template.doc" target="_blank" style="color: #102cf7"><u>点击下载摘要模板</u></a><br/>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>投稿截止：</strong>本批次征文将于11月30日截止<br/>
 			</p>
             </div>
 							
