更新页面内容

--- a/src/main/resources/templates/page/cn/cfp.html
+++ b/src/main/resources/templates/page/cn/cfp.html
@@ -86,11 +86,15 @@ var _hmt = _hmt || [];
             </strong>
           </p>
           <div class="mb-10">
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;2019国际前沿生物科学与技术国际会议（ICABST2019）在会议筹备期间，多个出版方提供版面支持，经由我方审核通过的论文，均可安排至相应期刊发表。现面向国内外学者征收相关领域论文，<strong>如您有意向发表SCI、EI期刊论文（非会议论文，正刊版面）及ISTP（CPCI-S）收录检索的会议论文，</strong>请尽早完成初稿的提交。
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;2019国际前沿生物科学与技术国际会议（ICABST2019）在会议筹备期间，多个出版方提供版面支持，经由我方审核通过的论文，均可安排至相应期刊发表。现面向国内外学者征收相关领域论文，<strong>如您有意向发表SCI、EI期刊论文（非会议论文，正刊版面）及EI、ISTP（CPCI-S）检索的会议论文，</strong>请尽早完成初稿的提交。
             </p>
-						<!--p>
-							被NatureEvents（www.nature.com）、科学网、CNKI中国知网、丁香园等平台收录和发布，同时被多个国内外出版机构列为合作会议；且
-						</p-->	
+						<p>
+						<a href="/cn/sci1" target="_blank" style="color: #102cf7"><u>SCI正刊征文1----生物、材料、分子生物相关领域</u></a><br/>
+						<a href="/cn/sci2" target="_blank" style="color: #102cf7"><u>SCI正刊征文2----农业科学、动植物科学、兽医学、水产、养殖等相关领域</u></a><br/>
+						<a href="/cn/sci3" target="_blank" style="color: #102cf7"><u>SCI正刊征文3----生物医学、药学等相关领域</u></a><br/>
+						<a href="/cn/sciabstract" target="_blank" style="color: #102cf7"><u>SCI摘要专题发表--中科院三区，影响因子2以上，JCR二区</u></a><br/>
+						<a href="/cn/cpci" target="_blank" style="color: #102cf7"><u>EI/CPCI检索会议论文征文通知</u></a><br/>
+
           </div>
 					<div class="mb-10">
             <strong>一、发表介绍</strong>
@@ -160,7 +164,7 @@ var _hmt = _hmt || [];
             </p>
             <p><strong>农业食品、动植物类</strong><br/>
               农业生物技术相关研究如遗传育种、耕作栽培、土壤微生物、
-              农业生态、农产品储藏加工、、生物天然产物等；<br/>
+              农业生态、农产品储藏加工、生物天然产物等；<br/>
               动物科学相关研究如动物生物制品、兽医与动物医学、动物养殖、动物基因与转基因、育种与繁殖等<br/>
               植物科学相关研究如植物栽培、植物营养、植物资源研究、植物病理等<br/>
               食品科学类相关研究如食品加工、检测、营养科学等<br/>
