--- a/src/main/resources/templates/page/cn/index.html
+++ b/src/main/resources/templates/page/cn/index.html
@@ -106,7 +106,7 @@ var _hmt = _hmt || [];
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2019国际前沿生物科学与技术国际会议（ICABST2019）将于2019年12月26日-28日在泰国曼谷召开。会议由亚太自然科学与工程协会主办。<br/>
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本届会议报告分为特邀报告、主题报告、口头报告和张贴海报四类形式。各类报告及听众参会，均会颁发交流证书。大会鼓励各界学者、科研人员踊跃参会，共同为从事相关领域的同僚提供最新研究成果、探讨最新技术、了解国际研究前沿和热点的机会和平台。<br/>
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;大会旨在促进生物科学技术的发展，并为分子生物学、生物医学与制药、生物力学与工程、生物及分子材料、生物化学、农业食品科学、及动植物学等相关学科领域的专家和学者搭建国际性学术交流平台，展示前沿研究成果，交流探讨最新工程技术，提出学科面临的考验，探索相关解决方法，推动生物科学与技术行业的发展。<br/>
-					<!--p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本届会议被Nature Events（www.nature.com）、科学网、CNKI中国知网、丁香园等平台收	录和发布，同时被多个国内外出版机构列为合作会议； 且在会议筹备期间，多个出版方提供版面支持，经由我方审核通过的论文，均可安排至相应期刊发表，并送交至相关数据库如SCI、EI及ISTP（CPCI-S）进行收录检索。<br/><p-->
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本届会议由Nature Events（www.nature.com）、科学网、CNKI中国知网、丁香园等平台收	录和发布，同时被多个国内外出版机构列为合作会议； 且在会议筹备期间，多个出版方提供版面支持，经由我方审核通过的论文，均可安排至相应期刊发表，并送交至相关数据库如SCI、EI及ISTP（CPCI-S）进行收录检索。<br/>
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本届会议力争成为推动理论应用发展的专业、前沿国际会议之一，欢迎广大学者、师生参会交流。同时希望相关高校和科研单位帮助转发会议信息<a class="pointer" href="/cn/download/flyer.pdf" target="_blank" style="color: #102cf7"><u>（下载会议宣传册）</u></a>。
         </p>
       </div>
@@ -116,12 +116,13 @@ var _hmt = _hmt || [];
         <div class="background5" style="padding-left:55px;">大会通知</div>
 				<div class="public_p pl-30">
         <ul>
-          <li><a href="/cn/cfp" target="_blank" style="color: #102cf7"><u>本届会议已开始征文（SCI、EI、ISTP期刊及会议论文）</u></a></li>
+          <li><a href="/cn/sci1" target="_blank" style="color: #102cf7"><u>SCI正刊征文1----生物、材料、分子生物相关领域</u></a></li>
+					<li><a href="/cn/sci2" target="_blank" style="color: #102cf7"><u>SCI正刊征文2----农业科学、动植物科学、兽医学、水产、养殖等相关领域</u></a></li>
+					<li><a href="/cn/sci3" target="_blank" style="color: #102cf7"><u>SCI正刊征文3----生物医学、药学等相关领域</u></a></li>
+					<li><a href="/cn/sciabstract" target="_blank" style="color: #102cf7"><u>SCI摘要发表--中科院三区，影响因子2以上，JCR二区</u></a></li>
+					<li><a href="/cn/cpci" target="_blank" style="color: #102cf7"><u>EI/CPCI检索会议论文征文通知</u></a></li>
 					<li><a href="/cn/submit" target="_blank" style="color: #102cf7"><u>在线提交参会信息入口已开放，请尽早提交参会信息</u></a></li>
-					<li><a href="/cn/program" target="_blank" style="color: #102cf7"><u>大会详细时间安排已初步完成</u></a></li>
-          <li><a href="/cn/about" target="_blank" style="color: #102cf7"><u>本届会议议题已定，将分为7个session召开</u></a></li>
-					<!--li><a href="/cn/organization" target="_blank" style="color: #102cf7"><u>本届会议已得到若干学术单位、媒体支持</u></a></li-->
-					<li><a href="/cn/venue" target="_blank" style="color: #102cf7"><u>签证、及会场周边住宿信息请“会议地点”</u></a></li>
+					<li><a href="/cn/venue" target="_blank" style="color: #102cf7"><u>签证、及会场周边住宿信息请参考“会议地点”</u></a></li>
         </ul>
         <div class="clear"></div>
       </div>
